# matplotlib-latex-bridge

./: .gitignore  README.md  setup.cfg  setup.py
docs/source/: conf.py  formats.rst  getting_started.rst  index.rst  matplotlib_latex_bridge.rst  modules.rst
examples/: build_examples.sh
examples/article_letterpaper_10pt_doublecolumn/: article_letterpaper_10pt_doublecolumn.tex  generate_images.py
examples/article_letterpaper_10pt_singlecolumn/: article_letterpaper_10pt_singlecolumn.tex  generate_images.py
examples/difference/: difference.tex  generate_images.py
examples/matplotlib_default/: generate_images.py  matplotlib_default.tex
src/matplotlib_latex_bridge/: __init__.py  formats.py  matplotlib_latex_bridge.py  version.py
tests/: test_formats.py  test_functions.py
