[metadata]
name = matplotlib-latex-bridge
version = 0.1.0
author = Lorenzo Vannucci
author_email = lore.ucci@gmail.com
description = Functions and shortcuts to create latex-ready images from matplotlib
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/loreucci/matplotlib-latex-bridge
project_urls =
    Bug Tracker = https://github.com/loreucci/matplotlib-latex-bridge/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    matplotlib

[options.packages.find]
where = src